# capsdac-ml-pipeline-v3

./: CAPSDAC_Level2_Validation_and_Interview_Notes.md  CAPSDAC_Level3_Interview_Narrative_Addendum.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.sh
api/: README.md
configs/: pipeline_config.yaml
dashboards/: streamlit_app.py
data/processed/: monthly_enrollment_features.csv
data/raw/: capsdac_child_enrollment_sample.csv
docs/: CLEAN_REORG_REPORT.md  MODEL_CARD.md  PHASE4_DEPLOYMENT_RUNBOOK.md  PHASE4_GCP_CLEANUP.md  V3_ARCHITECTURE.md  V3_MLE_INTERVIEW_GUIDE.md  V3_MODEL_CARD.md  V3_ROADMAP.md
docs/architecture/: ARCHITECTURE.md  AWS_PRODUCTIONIZATION.md  GCP_PRODUCTIONIZATION.md
docs/deployment/: PHASE4_COMPLETION_REPORT.md  PHASE4_GCP_DEPLOYMENT_GUIDE.md
docs/governance/: DATA_PRIVACY_AND_DEIDENTIFICATION.md
docs/interview/: GITHUB_PUSH_GUIDE.md  INTERVIEW_PACKAGE.md  INTERVIEW_TALKING_POINTS.md  PRINCIPAL_DATA_ENGINEER_UPGRADE_PLAN.md  RECRUITER_SUMMARY.md
docs/mle_package/: NEXT_LEVEL3_ROADMAP.md  (+1 more)
executive_materials/: CAPSDAC_Principal_Data_Engineer_Executive_Presentation.pptx  CAPSDAC_Principal_Data_Engineer_Executive_Report.docx
feature_store/: README.md  feature_definitions.yaml
ingestion/: README.md  load_snapshots.py
models/: capsdac_level2_best_forecast_model.joblib  capsdac_random_forest_forecast.joblib  capsdac_v3_challenger_forecast_model.joblib
scripts/: gcp_cost_check.sh
tests/: test_data_contracts.py  test_feature_engineering.py  test_model_selection.py  test_v3_registry_retraining.py
(+50 files in other folders)
